--- a/natya/dhruvam/static/css/style.css
+++ b/natya/dhruvam/static/css/style.css
@@ -34,7 +34,8 @@ video {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    /* background-color: #333;
+     */
     text-align: right; /* Aligns the links to the right */
 }
 
