--- a/natya/dhruvam/templates/index.html
+++ b/natya/dhruvam/templates/index.html
@@ -95,7 +95,7 @@
         </nav>
         <h2 class="container head-h2">The Sounds of Bells, The Steps From The Beats In The Distant Dreams</h2>
     </div>
-    <div class="about-section"  style"=margin-top: 100px;">
+    <div class="about-section"  style="margin-top: 100px;">
         <h2 style="text-align:center">Our Team</h2>
         <div class="container">
             <div class="row">
@@ -142,8 +142,9 @@
         </div>
     </div>
 
-    <div class="about-section mt-5" >
-        <nav class="navbar navbar-expand-lg navbar-light bg-transparent" style="margin-left: 85px;">
+    <div class="about-section"  style="margin-top: 50px;">
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-transparent" style="margin-left: 100px;">
             <div class="about-section-new justify-content-center">
                 <h2 style="text-align:center">Dance Forms</h2>
                 <p>These are the myriad Indian classical dance forms that are accessible on DHRUVAMOnline. Choose an art form of your liking or explore a different strand of India’s heritage.</p>
@@ -153,7 +154,7 @@
                             <a class="nav-link active" aria-current="page" href="/bharatanatyam">Bharatanatyam</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Mohiniyattam</a>
+                            <a class="nav-link" href="/ mohiniyattam">Mohiniyattam</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Kuchipudi</a>
@@ -197,7 +198,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="{% static 'images/kathak.jpeg' %}" class="d-block w-100" alt="Kathak">
+                            <img src="{% static 'images/kathak.jpg' %}" class="d-block w-100" alt="Kathak">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Kathak</h5>
                                 <p>Kathak is one of the nine major forms of Indian classical dance. Its origin is attributed to the traveling bards in ancient northern India known as Kathakars, who communicated stories from the Hindu epics and mythology through dance, songs, and music.</p>
@@ -232,8 +233,8 @@
     <p class="d-flex justify-content-center align-items-center">These are brief profiles of the Gurus who form the bedrock of NatyaSutraOnline. Their journeys and passion are a lighthouse, eternally illuminating a path towards the revival of Indian art forms.</p>
 </section>
 
-<div class="about-section mb-5">
-    <div class="container row" style="margin-left: 100px;"> 
+<div class="about-section mb-3">
+    <div class="container row" style="margin-left: 50px;"> 
         <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
             <!-- Indicators -->
             <div class="carousel-indicators">
